# example-counter-app

./: Cargo.toml  Dioxus.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: deploy.yml
src/: main.rs
src/components/: counter.rs
src/views/: home.rs
