[package]
name = "example-counter-app"
version = "0.1.0"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.5", features = ["router"] }
wasm-bindgen = "=0.2.114" # For nixpkgs' pkgs.dioxus-cli with wasm-bindgen-cli_0_2_114

[features]
default = ["web"]
web = ["dioxus/web"]
